appId: com.eversync.zllo
---
- runFlow: _helpers/open-dev-app.yaml
- assertVisible: 'Já tenho conta'
- tapOn: 'Já tenho conta'
- assertVisible: 'Entrar'
